# loomboard

./: .env.extension  .env.standalone  .env.tauri  .gitignore  CLAUDE.MD  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.lib.json  vite.config.extension.ts  vite.config.lib.ts  vite.config.ts
.github/workflows/: ci.yml  publish.yml  release.yml
cli/: .gitignore  LICENSE  README.md  package-lock.json  package.json
extension/: PRIVACY.md  PUBLISHING.md  README.md  manifest.config.ts  sw.ts
extension/content/: executor.ts  refmap.ts  snapshot.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/bridge/: approval.test.ts  approval.ts  channelLoop.ts  clientToolHost.test.ts  clientToolHost.ts  dispatch.test.ts  dispatch.ts  ensureAgent.ts  ensureChannels.ts  protocol.ts  status.ts  systemPrompt.ts
src/chat/: Chat.tsx  index.ts  mammoth-browser.d.ts  styles.css  types.ts
src/components/: AgentConfigPanel.tsx  AgentPicker.tsx  Chat.tsx  ChatPane.tsx  CompactButton.tsx  Composer.tsx  ConnectionSettings.tsx  ConversationList.tsx  CopyButton.tsx  InterruptCard.tsx  Markdown.tsx  Message.tsx  MessageList.tsx  MetricsHud.tsx  NewChatButton.tsx  Sidebar.tsx  ThinkingBlock.tsx  ToolCard.tsx
src/hooks/: useAgents.ts  useChat.ts  useTheme.ts  useTilePreview.ts  useUserInterrupts.ts  useUserRunStates.ts
src/lib/: agentFork.ts  agentIdentity.test.ts  agentIdentity.ts  attachmentBudget.test.ts  attachmentBudget.ts  events.ts  (+17 more)
(+47 files in other folders)
